--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/guicouto90/binds_challenge#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0"
