--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/guicouto90/binds_challenge#readme",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
